fix favicon not showing bug

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -87,7 +87,7 @@ $small-size: 200px;
 .portrait {
   width: $middle-size;
   height: $middle-size;
-  background: url("/assets/img/portrait.webp");
+  background: url("/assets/img/portrait.jpg");
   background-size: $middle-size;
   background-position: center;
   border-radius: 50%;
